# ArchiveCollegeProjects-RayTracer

./: .gitignore  CMakeLists.txt  Config.ini  README.md
shaders/: RayTracer.fs  RayTracer.vs
src/: main.cpp
src/math/: Matrix.cpp  Matrix.h
src/system/: FileWork.cpp  FileWork.h
